--- a/style.css
+++ b/style.css
@@ -46,4 +46,21 @@ margin-left: 100px;
 .skills .the-skill div{
 padding-top: 40px;
 }
+.button{
+    cursor: pointer;
+    background-color: black;
+    border: 2px solid white;
+    border-radius: 30px;
+    text-decoration: none;
+    padding: 10px 28px;
+    color: white;
+    margin-top: 10px;
+    display: inline-block;
+}
+.button:hover{
+    background-color: black;
+    color: #ffffff;
+    border: 2px solid #ffffff
+}
+
 
